Update page - contact-tracing.html d361e536cabc23256518d32f38f7ca9cb065e696

--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;March 25, 2021 at 4:30 PM</p>
+            <p class="small-text">Last updated&nbsp;April 1, 2021 at 10:49 AM</p>
           
         </div>
       </div>
@@ -162,7 +162,7 @@
 
     <div class="col-md-9 order-last order-md-1">
       <h2 class="h3 color-primary mt-0">Sign up for COVID-19 exposure notifications
-      </h3>
+      </h2>
       <p>Add CA Notify to your phone and get notified if you were near someone with COVID-19.
       </p>
       <a class="button-lightblue font-size-1em" href="https://canotify.ca.gov/">Find out more
@@ -451,7 +451,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="California-COVID-Notify">How can I participate in CA Notify, Google and Apple’s exposure notification system?</h4>
+            <h3 id="California-COVID-Notify">How can I participate in CA Notify, Google and Apple’s exposure notification system?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -474,7 +474,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>What is a close contact?</h4>
+            <h3>What is a close contact?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -507,7 +507,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Am I considered a close contact if I was wearing a mask?</h4>
+            <h3>Am I considered a close contact if I was wearing a mask?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -530,7 +530,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Will contact tracers track my location?</h4>
+            <h3>Will contact tracers track my location?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -553,7 +553,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Is contact tracing help available in my language?&nbsp;</h4>
+            <h3>Is contact tracing help available in my language?&nbsp;</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -576,7 +576,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>How do I find a coronavirus testing location?</h4>
+            <h3>How do I find a coronavirus testing location?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -599,7 +599,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="LHD-Contact-COVID-19-Symptoms">What if I have COVID-19 symptoms and have not been contacted by the health department?</h4>
+            <h3 id="LHD-Contact-COVID-19-Symptoms">What if I have COVID-19 symptoms and have not been contacted by the health department?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -632,7 +632,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="LHD-Contact-COVID-19-Contacts">What if I came in contact with someone who has COVID-19 symptoms, but my local health department is not aware of it?</h4>
+            <h3 id="LHD-Contact-COVID-19-Contacts">What if I came in contact with someone who has COVID-19 symptoms, but my local health department is not aware of it?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -685,7 +685,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="Schools-Contact-Tracing">How is the state supporting schools with contact tracing?</h4>
+            <h3 id="Schools-Contact-Tracing">How is the state supporting schools with contact tracing?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
