Update page - masks-and-ppe.html 08d52d3417039e6a0ce3e4b874649829ec2d11f9

--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;March 10, 2021 at 2:14 PM</p>
+            <p class="small-text">Last updated&nbsp;April 1, 2021 at 11:29 AM</p>
           
         </div>
       </div>
@@ -283,7 +283,7 @@
 
 
 
-<p>KN95s are respirators designed to provide a specific level of protection. But KN95 respirators have not gone through the same strict testing as N95s. </p>
+<p>KN95s are respirators designed to provide a specific level of protection. But KN95 respirators have not gone through the same strict testing as N95s.&nbsp;</p>
 
 
 
@@ -449,7 +449,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Should I wear a mask or face covering to protect against COVID-19?</h4>
+            <h3>Should I wear a mask or face covering to protect against COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -487,7 +487,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>What is a face covering?</h4>
+            <h3>What is a face covering?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -510,7 +510,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>How well do face coverings prevent spread of COVID-19?</h4>
+            <h3>How well do face coverings prevent spread of COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -533,7 +533,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>How should I care for a cloth mask or face covering?</h4>
+            <h3>How should I care for a cloth mask or face covering?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -566,7 +566,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Are face shields acceptable as face coverings to prevent spread of COVID-19?</h4>
+            <h3>Are face shields acceptable as face coverings to prevent spread of COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -594,7 +594,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Should I wear a mask on public transportation and at transportation hubs?</h4>
+            <h3>Should I wear a mask on public transportation and at transportation hubs?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -632,7 +632,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Is there any proof that masks are effective in preventing coronavirus infection?</h4>
+            <h3>Is there any proof that masks are effective in preventing coronavirus infection?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
