Update page - vaccines.html 825641604f8801572ae4bc5b29c6d42fd6ae88c3

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;April 1, 2021 at 6:38 AM</p>
+            <p class="small-text">Last updated&nbsp;April 1, 2021 at 1:57 PM</p>
           
         </div>
       </div>
@@ -605,7 +605,7 @@
 
 
 
-<h2 id="What-to-expect-after-vaccination">What to expect after vaccination</h2>
+<h2>What to expect after vaccination</h2>
 
 
 
