Update page - get-tested.html d8e1d4a81da4711f16f158d2d63952e525ddd2b9

--- a/ar/masks-and-ppe/index.html
+++ b/ar/masks-and-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الأقنعة</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:14 م الساعة 10 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;11:29 ص الساعة 1 أبريل 2021</p>
           
         </div>
       </div>
@@ -440,7 +440,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل يجب أن أرتدي غطاءً للوجه أو قناعًا للوقاية من فيروس كوفيد-19؟</h4>
+            <h3>هل يجب أن أرتدي غطاءً للوجه أو قناعًا للوقاية من فيروس كوفيد-19؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -478,7 +478,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>ما هو غطاء الوجه؟</h4>
+            <h3>ما هو غطاء الوجه؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -501,7 +501,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>إلى أي مدى تمنع أغطية الوجه انتشار كوفيد-19؟</h4>
+            <h3>إلى أي مدى تمنع أغطية الوجه انتشار كوفيد-19؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -524,7 +524,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>كيف يجب أن أعتني بقناع أو بغطاء الوجه المصنوع من القماش؟</h4>
+            <h3>كيف يجب أن أعتني بقناع أو بغطاء الوجه المصنوع من القماش؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -557,7 +557,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل تعتبر واقيات الوجه مقبولة كأغطية للوجه لمنع انتشار كوفيد-19؟</h4>
+            <h3>هل تعتبر واقيات الوجه مقبولة كأغطية للوجه لمنع انتشار كوفيد-19؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -585,7 +585,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل يجب عليّ ارتداء قناع في وسائل النقل العام ومحاور النقل؟</h4>
+            <h3>هل يجب عليّ ارتداء قناع في وسائل النقل العام ومحاور النقل؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -623,7 +623,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل يوجد أي دليل على فعالية الأقنعة في الوقاية من الإصابة بفيروس كورونا؟</h4>
+            <h3>هل يوجد أي دليل على فعالية الأقنعة في الوقاية من الإصابة بفيروس كورونا؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
