--- a/ko/masks-and-ppe/index.html
+++ b/ko/masks-and-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>마스크</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 10일 오후 2:14</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 4월 1일 오전 11:29</p>
           
         </div>
       </div>
@@ -440,7 +440,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>COVID-19로부터 보호하려면 마스크 또는 안면 가리개를 착용해야 합니까?</h4>
+            <h3>COVID-19로부터 보호하려면 마스크 또는 안면 가리개를 착용해야 합니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -478,7 +478,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>안면 가리개란 무엇입니까?</h4>
+            <h3>안면 가리개란 무엇입니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -501,7 +501,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>안면 가리개는 COVID-19 확산 방지에 얼마나 효과적입니까?</h4>
+            <h3>안면 가리개는 COVID-19 확산 방지에 얼마나 효과적입니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -524,7 +524,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>천 마스크 또는 안면 가리개는 어떻게 관리해야 합니까?</h4>
+            <h3>천 마스크 또는 안면 가리개는 어떻게 관리해야 합니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -557,7 +557,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>COVID-19의 확산 예방을 위해 안면 보호대를 안면 가리개로 사용할 수 있습니까?</h4>
+            <h3>COVID-19의 확산 예방을 위해 안면 보호대를 안면 가리개로 사용할 수 있습니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -585,7 +585,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>대중 교통에 탑승하거나 및 교통 중심지에서 마스크를 착용해야 합니까?</h4>
+            <h3>대중 교통에 탑승하거나 및 교통 중심지에서 마스크를 착용해야 합니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -623,7 +623,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>마스크가 코로나바이러스 감염을 효과적으로 예방할 수 있다는 그 어떤 증거가 있습니까?</h4>
+            <h3>마스크가 코로나바이러스 감염을 효과적으로 예방할 수 있다는 그 어떤 증거가 있습니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
