--- a/tl/masks-and-ppe/index.html
+++ b/tl/masks-and-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga mask</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 10, 2021 sa 2:14 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Abril 1, 2021 sa 11:29 AM</p>
           
         </div>
       </div>
@@ -440,7 +440,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Dapat ba akong magsuot ng mask o takip sa mukha para maprotektahan ako laban sa COVID-19?</h4>
+            <h3>Dapat ba akong magsuot ng mask o takip sa mukha para maprotektahan ako laban sa COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -478,7 +478,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Ano ang takip sa mukha?</h4>
+            <h3>Ano ang takip sa mukha?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -501,7 +501,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Gaano kaepektibo ang mga takip sa mukha sa pagpigil sa pagkalat ng COVID-19?</h4>
+            <h3>Gaano kaepektibo ang mga takip sa mukha sa pagpigil sa pagkalat ng COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -524,7 +524,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Paano ko mapapanatiling maayos ang isang takip sa mukha na gawa sa tela?</h4>
+            <h3>Paano ko mapapanatiling maayos ang isang takip sa mukha na gawa sa tela?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -557,7 +557,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Katanggap-tanggap ba ang mga face shield bilang takip sa mukha para maiwasan ang pagkalat ng COVID-19?</h4>
+            <h3>Katanggap-tanggap ba ang mga face shield bilang takip sa mukha para maiwasan ang pagkalat ng COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -585,7 +585,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Dapat ba akong magsuot ng mask sa pampublikong transportasyon at sa mga hub ng transportasyon?</h4>
+            <h3>Dapat ba akong magsuot ng mask sa pampublikong transportasyon at sa mga hub ng transportasyon?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -623,7 +623,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Napatunayan na bang epektibo ang mga mask sa pagpigil sa impeksyong dulot ng coronavirus?</h4>
+            <h3>Napatunayan na bang epektibo ang mga mask sa pagpigil sa impeksyong dulot ng coronavirus?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
