--- a/zh-hans/masks-and-ppe/index.html
+++ b/zh-hans/masks-and-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>口罩</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月10日, 下午2:14</p>
+            <p class="small-text">最后更新时间&nbsp;2021年4月1日, 上午11:29</p>
           
         </div>
       </div>
@@ -440,7 +440,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>我是否应该佩戴口罩或面罩来防范COVID-19？</h4>
+            <h3>我是否应该佩戴口罩或面罩来防范COVID-19？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -478,7 +478,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>什么是面罩？</h4>
+            <h3>什么是面罩？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -501,7 +501,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>面罩预防COVID-19传播的有效程度如何？</h4>
+            <h3>面罩预防COVID-19传播的有效程度如何？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -524,7 +524,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>我应该如何保养布口罩或面罩？</h4>
+            <h3>我应该如何保养布口罩或面罩？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -557,7 +557,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>护面罩是否可以作为面罩来预防新型冠状病毒的传播？</h4>
+            <h3>护面罩是否可以作为面罩来预防新型冠状病毒的传播？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -585,7 +585,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>我是否应该在公共交通工具上及交通枢纽佩戴口罩？</h4>
+            <h3>我是否应该在公共交通工具上及交通枢纽佩戴口罩？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -623,7 +623,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>是否有证据表明口罩可以有效预防新型冠状病毒感染？</h4>
+            <h3>是否有证据表明口罩可以有效预防新型冠状病毒感染？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
