--- a/es/masks-and-ppe/index.html
+++ b/es/masks-and-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mascarillas</h1>
           
-            <p class="small-text">Última actualización&nbsp;10 de marzo de 2021 a las 2:14 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;1 de abril de 2021 a las 11:29 a. m.</p>
           
         </div>
       </div>
@@ -440,7 +440,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Debo usar una mascarilla o una cubierta facial para protegerme contra la COVID-19?</h4>
+            <h3>¿Debo usar una mascarilla o una cubierta facial para protegerme contra la COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -478,7 +478,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Qué es una cubierta facial?</h4>
+            <h3>¿Qué es una cubierta facial?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -501,7 +501,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Qué tan bien funcionan las cubiertas faciales para evitar la propagación de la COVID-19?</h4>
+            <h3>¿Qué tan bien funcionan las cubiertas faciales para evitar la propagación de la COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -524,7 +524,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Qué cuidados le debo dar a una mascarilla de tela o cubierta facial?</h4>
+            <h3>¿Qué cuidados le debo dar a una mascarilla de tela o cubierta facial?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -557,7 +557,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Son aceptables las caretas como cubiertas faciales para prevenir la propagación de la COVID-19?</h4>
+            <h3>¿Son aceptables las caretas como cubiertas faciales para prevenir la propagación de la COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -585,7 +585,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Debo usar una mascarilla en el transporte público y en los centros de transporte?</h4>
+            <h3>¿Debo usar una mascarilla en el transporte público y en los centros de transporte?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -623,7 +623,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Existe alguna prueba de que las mascarillas sean eficaces para prevenir la infección por coronavirus?</h4>
+            <h3>¿Existe alguna prueba de que las mascarillas sean eficaces para prevenir la infección por coronavirus?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
