--- a/vi/latest-news/index.html
+++ b/vi/latest-news/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tin tức mới nhất về COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;1 tháng 4, 2021 lúc 16:07</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;1 tháng 4, 2021 lúc 16:15</p>
           
         </div>
       </div>
@@ -165,6 +165,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--48001 -->April 1, 2021</small></p>
           <div class="card-text" lang="en-US">All Californians 50+ are eligible for COVID-19 vaccines starting today California has administered more than 18 million vaccine doses to date Governor Newsom receives Johnson &amp; Johnson vaccine at South Los Angeles va...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-108.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#369)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--f7a3a0d47fc33ed32b0da05b0ecc1d15 -->March 31, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
