--- a/ar/childcare/index.html
+++ b/ar/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>اعثر على خيارات رعاية الأطفال القريبة منك</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:04 م الساعة 24 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;2:08 م الساعة 1 أبريل 2021</p>
           
         </div>
       </div>
@@ -237,7 +237,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل يمكنني الحصول على المساعدة فيما يتعلق بالدفع مقابل رعاية الأطفال؟</h4>
+            <h3>هل يمكنني الحصول على المساعدة فيما يتعلق بالدفع مقابل رعاية الأطفال؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -260,7 +260,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل ما زال بإمكان جليسة الأطفال القدوم إلى منزلي؟</h4>
+            <h3>هل ما زال بإمكان جليسة الأطفال القدوم إلى منزلي؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
