--- a/es/childcare/index.html
+++ b/es/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Encuentre opciones de cuidado infantil cerca de usted</h1>
           
-            <p class="small-text">Última actualización&nbsp;24 de marzo de 2021 a las 2:04 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;1 de abril de 2021 a las 2:08 p. m.</p>
           
         </div>
       </div>
@@ -237,7 +237,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Puedo obtener ayuda para pagar el cuidado infantil?</h4>
+            <h3>¿Puedo obtener ayuda para pagar el cuidado infantil?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -260,7 +260,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Puede mi niñera venir a mi casa?</h4>
+            <h3>¿Puede mi niñera venir a mi casa?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
