--- a/pages/translated-posts/homepage-featured-ko.html
+++ b/pages/translated-posts/homepage-featured-ko.html
@@ -1,12 +1,12 @@
-  <section class="featured-content" role="region" aria-label="Featured updates">
+<section class="featured-content" role="region" aria-label="Featured updates">
     <div class="news pt-6">
 			<div class="news-wrap">    
 				<div class="news-grid">
-					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">백신 접종 받기</a></p>
+					<article class="news-item"> 						<a href="/vaccines/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" alt="캘리포니아 주민 대상 백신 접종"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">백신 접종 받기</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">해당 카운티 내 운영을 개시한 업계 확인</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/" class="featured-content-image"> <img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" alt="사업체 창문에 있는 현재 영업 중 표지판"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">해당 카운티 내 운영을 개시한 업계 확인</a></p>
 					</article>
-					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" /> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">해당 카운티 단계 확인</a></p>
+					<article class="news-item"> 						<a href="/safer-economy/#county-status" class="featured-content-image"> <img class="state-map" src="/img/cali-counties-colors.svg" alt="단계별로 색상이 표시된 캘리포니아 카운티 지도"> </a> 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">해당 카운티 단계 확인</a></p>
 					</article>
 				</div>
 			</div>
