--- a/distance-learning/index.html
+++ b/distance-learning/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Distance learning resources for educators</h1>
           
-            <p class="small-text">Last updated&nbsp;January 15, 2021 at 4:43 PM</p>
+            <p class="small-text">Last updated&nbsp;April 2, 2021 at 8:42 AM</p>
           
         </div>
       </div>
@@ -169,7 +169,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 class=" js-qa-exclude">San José State University (SJSU) Online Teacher Academy</h4>
+            <h2 class=" js-qa-exclude">San José State University (SJSU) Online Teacher Academy</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -214,7 +214,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 class=" js-qa-exclude">UC San Diego Teaching Online Essentials</h4>
+            <h2 class=" js-qa-exclude">UC San Diego Teaching Online Essentials</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -224,9 +224,7 @@
 </div>
 <p>UC San Diego Extension has offered a certificate program in online teaching for more than 15 years. When the pandemic struck, Extension’s Education and Community Outreach (ECO) Department distilled this proven curriculum into an intensive training experience called Teaching Online Essentials.</p>
 <p>Teachers and parents can find best practices in online and hybrid education, emphasizing creativity, connectivity and transformative experiences geared to the needs of diverse learners.</p>
-<h5>Register for the free courses</h5>
 <ul><li><a rel="noreferrer noopener" href="https://extension.ucsd.edu/courses-and-programs/online-teaching-essentials" target="_blank">Workshops for Teachers</a></li><li><a rel="noreferrer noopener" href="https://extension.ucsd.edu/courses-and-programs/online-training-essentials" target="_blank">Workshops for Trainers</a></li></ul>
-<h5>Online resources</h5>
 <ul><li><a rel="noreferrer noopener" href="https://extension.ucsd.edu/getattachment/community-and-research/serving-the-community/UC-Professional-Development-Institute-UCPDI/Guide-to-Teaching-Online-Essentials.pdf.aspx" target="_blank">Guide to Teaching Online Essentials (PDF)</a></li><li><a rel="noreferrer noopener" href="https://extension.ucsd.edu/getattachment/community-and-research/serving-the-community/UC-Professional-Development-Institute-UCPDI/A-Parents-Guide-to-Remote-Learning.pdf.aspx" target="_blank">A Parent’s Guide to Distance Learning (PDF)</a></li><li><a rel="noreferrer noopener" href="https://www.uctv.tv/education/parents/" target="_blank">University of California Television Education Channel</a></li></ul>
 
                   </div>
@@ -249,6 +247,7 @@
 
 
 
+<p><strong>Register for the free courses</strong></p>
 
 
 
@@ -256,8 +255,7 @@
 
 
 
-
-
+<p><strong>Online resources</strong></p>
 
 
 
@@ -269,7 +267,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 class=" js-qa-exclude">CTA, Stanford SCOPE, and NBRC Instructional Leadership Corps</h4>
+            <h2 class=" js-qa-exclude">CTA, Stanford SCOPE, and NBRC Instructional Leadership Corps</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -309,7 +307,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 class=" js-qa-exclude">CTA Instruction and Professional Development Team</h4>
+            <h2 class=" js-qa-exclude">CTA Instruction and Professional Development Team</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -349,7 +347,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 class=" js-qa-exclude">Google for Education resources</h4>
+            <h2 class=" js-qa-exclude">Google for Education resources</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -357,12 +355,10 @@
             <div class="text-center mx-auto col-md-3 pt-3 ">
           <figure><img src="https://files.covid19.ca.gov/img/google-logo.png" alt="Google logo" class="img-fluid"></figure>
 </div>
-<h5>Google Teacher Center</h5>
 <p>The Google Teacher Center provides free training and resources designed to help educators of all levels use technology to make teaching and learning more effective, efficient, and engaging—however your classroom looks this year.</p>
 <ul><li>Find quick tips and resources for tools like Classroom, Slides, and Meet with our product guides.</li><li>Discover new strategies for keeping students engaged while teaching remotely in our Distance Learning and Inspiring Creativity training courses.</li><li>Learn to integrate Google tools in your classroom in the Fundamentals and Advanced training courses.</li></ul>
 <p>No login is necessary to access content, but is recommended to track progress. Google Certified Educator exams require payment to obtain credentials and take the exam (recommended through Kryterion).</p>
 <p class=" text-center mb-4"><a href="https://edu.google.com/teacher-center/" target="_blank" rel="noreferrer noopener" class="button-lightblue">Visit Google Teacher Center</a></p>
-<h5>Teach from Anywhere</h5>
 <p>Find tips, resources, and tools for teachers and families to help keep students learning.</p>
 <p class=" text-center mb-4"><a href="https://teachfromanywhere.google/intl/en#for-teachers" target="_blank" rel="noreferrer noopener" class="button-lightblue">Teach from Anywhere</a></p>
 
@@ -378,6 +374,7 @@
 
 
 
+<p><strong>Google Teacher Center</strong></p>
 
 
 
@@ -397,8 +394,7 @@
 
 
 
-
-
+<p><strong>Teach from Anywhere</strong></p>
 
 
 
@@ -414,7 +410,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 class=" js-qa-exclude">Apple Education resources</h4>
+            <h2 class=" js-qa-exclude">Apple Education resources</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
