--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>News from the Governor&rsquo;s Office</h1>
           
-            <p class="small-text">Last updated&nbsp;April 1, 2021 at 4:53 PM</p>
+            <p class="small-text">Last updated&nbsp;April 2, 2021 at 8:47 AM</p>
           
         </div>
       </div>
