--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">最近更新&nbsp;April 1, 2021 at 4:53 PM</p>
+            <p class="small-text">最近更新&nbsp;April 2, 2021 at 8:47 AM</p>
           
         </div>
       </div>
