Update page - distance-learning.html 7db5d547fe222330a217253dfd84448c21dc842f

--- a/distance-learning/index.html
+++ b/distance-learning/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Distance learning resources for educators</h1>
           
-            <p class="small-text">Last updated&nbsp;April 2, 2021 at 8:42 AM</p>
+            <p class="small-text">Last updated&nbsp;April 2, 2021 at 2:45 PM</p>
           
         </div>
       </div>
@@ -224,7 +224,9 @@
 </div>
 <p>UC San Diego Extension has offered a certificate program in online teaching for more than 15 years. When the pandemic struck, Extension’s Education and Community Outreach (ECO) Department distilled this proven curriculum into an intensive training experience called Teaching Online Essentials.</p>
 <p>Teachers and parents can find best practices in online and hybrid education, emphasizing creativity, connectivity and transformative experiences geared to the needs of diverse learners.</p>
+<p><strong>Register for the free courses</strong></p>
 <ul><li><a rel="noreferrer noopener" href="https://extension.ucsd.edu/courses-and-programs/online-teaching-essentials" target="_blank">Workshops for Teachers</a></li><li><a rel="noreferrer noopener" href="https://extension.ucsd.edu/courses-and-programs/online-training-essentials" target="_blank">Workshops for Trainers</a></li></ul>
+<p><strong>Online resources</strong></p>
 <ul><li><a rel="noreferrer noopener" href="https://extension.ucsd.edu/getattachment/community-and-research/serving-the-community/UC-Professional-Development-Institute-UCPDI/Guide-to-Teaching-Online-Essentials.pdf.aspx" target="_blank">Guide to Teaching Online Essentials (PDF)</a></li><li><a rel="noreferrer noopener" href="https://extension.ucsd.edu/getattachment/community-and-research/serving-the-community/UC-Professional-Development-Institute-UCPDI/A-Parents-Guide-to-Remote-Learning.pdf.aspx" target="_blank">A Parent’s Guide to Distance Learning (PDF)</a></li><li><a rel="noreferrer noopener" href="https://www.uctv.tv/education/parents/" target="_blank">University of California Television Education Channel</a></li></ul>
 
                   </div>
@@ -247,7 +249,6 @@
 
 
 
-<p><strong>Register for the free courses</strong></p>
 
 
 
@@ -255,7 +256,8 @@
 
 
 
-<p><strong>Online resources</strong></p>
+
+
 
 
 
@@ -355,10 +357,12 @@
             <div class="text-center mx-auto col-md-3 pt-3 ">
           <figure><img src="https://files.covid19.ca.gov/img/google-logo.png" alt="Google logo" class="img-fluid"></figure>
 </div>
+<p><strong>Google Teacher Center</strong></p>
 <p>The Google Teacher Center provides free training and resources designed to help educators of all levels use technology to make teaching and learning more effective, efficient, and engaging—however your classroom looks this year.</p>
 <ul><li>Find quick tips and resources for tools like Classroom, Slides, and Meet with our product guides.</li><li>Discover new strategies for keeping students engaged while teaching remotely in our Distance Learning and Inspiring Creativity training courses.</li><li>Learn to integrate Google tools in your classroom in the Fundamentals and Advanced training courses.</li></ul>
 <p>No login is necessary to access content, but is recommended to track progress. Google Certified Educator exams require payment to obtain credentials and take the exam (recommended through Kryterion).</p>
 <p class=" text-center mb-4"><a href="https://edu.google.com/teacher-center/" target="_blank" rel="noreferrer noopener" class="button-lightblue">Visit Google Teacher Center</a></p>
+<p><strong>Teach from Anywhere</strong></p>
 <p>Find tips, resources, and tools for teachers and families to help keep students learning.</p>
 <p class=" text-center mb-4"><a href="https://teachfromanywhere.google/intl/en#for-teachers" target="_blank" rel="noreferrer noopener" class="button-lightblue">Teach from Anywhere</a></p>
 
@@ -374,7 +378,6 @@
 
 
 
-<p><strong>Google Teacher Center</strong></p>
 
 
 
@@ -394,7 +397,8 @@
 
 
 
-<p><strong>Teach from Anywhere</strong></p>
+
+
 
 
 
